--- a/Lista_1.ipynb
+++ b/Lista_1.ipynb
@@ -245,9 +245,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyLIMA-pip",
+   "display_name": "PyLIMA",
    "language": "python",
-   "name": "pylima-pip"
+   "name": "pylima"
   },
   "language_info": {
    "codemirror_mode": {
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
