computed optical depth

--- a/Lista_4.ipynb
+++ b/Lista_4.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "567af0ff-61b6-4334-8f10-78032498b3a6",
    "metadata": {},
    "outputs": [],
@@ -42,10 +42,14 @@
     "\n",
     "La cantidad $\\frac{R_E(x)^2}{m} = \\kappa \\pi D_s^2 x(1-x)$\n",
     "\n",
-    "Por otro lado la densidad de esfera isoterma es\n",
-    "$$\\rho(x) = \\frac{R_{sol}^2+R_c^2}{R_c^2+r} $$\n",
+    "Por un lado la densidad de esfera isoterma es\n",
     "\n",
-    "con $$ x = \\sqrt{R_S^2 + (D_S x)^2 - 2 D_S Rs  x  \\cos(l)\\cos(b))}$$"
+    "$$\\rho(x) = \\frac{R_{sol}^2+R_c^2}{R_c^2+r(x)^2} $$\n",
+    "\n",
+    "Por otro lado la densidad de NFW\n",
+    "$$\\rho(x) = \\frac{\\rho_0}{\\frac{r(x)}{R_s}\\left(1+\\frac{r(x)}{R_s}\\right)^2} $$\n",
+    "\n",
+    "con $$ r(x) = \\sqrt{R_S^2 + (D_S x)^2 - 2 D_S Rs  x  \\cos(l)\\cos(b))}$$"
    ]
   },
   {
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "a5f26945-b7a2-481d-b252-6eded12d767e",
    "metadata": {},
    "outputs": [],
@@ -72,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "983570dd-3416-4127-b29f-50a0c1b62540",
    "metadata": {},
    "outputs": [],
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "1a97dad5-73e4-4627-a62b-ecfcd292c311",
    "metadata": {},
    "outputs": [
@@ -115,15 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "50956919-d606-411e-ae50-b6bddb22a07e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Integrated Optical Depth: 3.943342232943051e-07\n"
+      "Integrated Optical Depth (Isothermal Sphere): 5.104534452369212e-07\n",
+      "Integrated Optical Depth (Navarro Frenk White): 3.943342232943051e-07\n"
      ]
     }
    ],
@@ -135,39 +142,91 @@
     "from scipy.integrate import fixed_quad\n",
     "\n",
     "def pos_sol(x):\n",
-    "    l = -32.8\n",
-    "    b = 281\n",
-    "    Ds = 55 * u.kpc\n",
+    "    '''\n",
+    "    Calculates the position of the Sun relative to the Galactic center.\n",
+    "\n",
+    "    Parameters:\n",
+    "    x (float): Fractional distance parameter, 0 ≤ x ≤ 1.\n",
+    "\n",
+    "    Returns:\n",
+    "    r (Quantity): Distance of the Sun from the Galactic center in kiloparsecs.\n",
+    "    '''\n",
+    "    l = -32.8  # Galactic longitude in degrees\n",
+    "    b = 281  # Galactic latitude in degrees\n",
+    "    Ds = 55 * u.kpc  # Distance to the source in kiloparsecs\n",
     "    angle = np.cos(math.radians(l)) * np.cos(math.radians(b))\n",
-    "    Rs = 8.5 * u.kpc\n",
+    "    Rs = 8.5 * u.kpc  # Distance of the Sun from the Galactic center in kiloparsecs\n",
     "    r = np.sqrt(Rs**2 + (Ds * x)**2 - 2 * Rs * (x * Ds) * angle)\n",
     "    return r\n",
     "\n",
     "def rho_NFW(r):\n",
-    "    Rs = 21.5 * u.kpc\n",
-    "    rho0 = 4.88e+6 * c.M_sun / u.kpc**3\n",
-    "    x = r / Rs\n",
-    "    bot = x * (1 + x)**2\n",
-    "    rho = rho0 / bot\n",
-    "    return rho\n",
+    "    '''    \n",
+    "    Navarro-Frenk-White (NFW) density profile for dark matter distribution.\n",
+    "\n",
+    "    Parameters:\n",
+    "    r (Quantity): Distance from the Galactic center in kiloparsecs.\n",
+    "\n",
+    "    Returns:\n",
+    "    density (Quantity): NFW density at distance r in units of solar masses per cubic kiloparsec.\n",
+    "    '''\n",
+    "    Rs = 21.5 * u.kpc  # Scale radius in kiloparsecs\n",
+    "    rho0 = 4.88e+6 * c.M_sun / u.kpc**3  # Characteristic density\n",
+    "    q = r / Rs\n",
+    "    bot = q * (1 + q)**2\n",
+    "    return rho0 / bot\n",
+    "\n",
+    "def rho_iso(r):\n",
+    "    '''\n",
+    "    Isothermal sphere density profile.\n",
+    "\n",
+    "    Parameters:\n",
+    "    r (Quantity): Distance from the Galactic center in kiloparsecs.\n",
+    "\n",
+    "    Returns:\n",
+    "    density (Quantity): Density at distance r in units of solar masses per cubic kiloparsec.\n",
+    "    '''\n",
+    "    rho0 = 7.9e-3 * c.M_sun / (u.pc)**3  # Central density in solar masses per cubic parsec\n",
+    "    Rsol = 8.5 * u.kpc  # Solar distance to the Galactic center in kiloparsecs\n",
+    "    Rc = 5 * u.kpc  # Core radius in kiloparsecs\n",
+    "    top = rho0 * (Rsol**2 + Rc**2)\n",
+    "    bot = r**2 + Rc**2\n",
+    "    return top / bot\n",
     "\n",
     "def Einstein_angle_sq_m(x):\n",
-    "    Ds = 55 * u.kpc\n",
-    "    k = 4 * c.G / c.c**2\n",
+    "    '''\n",
+    "    Computes the squared Einstein angle times the distance to the lens (Dl) times the lens mass (M).\n",
+    "\n",
+    "    Parameters:\n",
+    "    x (float): Fractional distance parameter, 0 ≤ x ≤ 1.\n",
+    "\n",
+    "    Returns:\n",
+    "    Quantity: Squared Einstein angle times Dl times M in units of meters squared kilograms.\n",
+    "    '''\n",
+    "    Ds = 55 * u.kpc  # Distance to the source in kiloparsecs\n",
+    "    k = 4 * c.G / c.c**2  # Constant related to the gravitational lensing effect\n",
     "    return (k * x * (1 - x) * Ds**2)\n",
     "\n",
     "def int_optical_depth(rho, x):\n",
     "    '''\n",
-    "    Integrand for optical depth\n",
+    "    Computes the integrand for optical depth calculation.\n",
+    "\n",
+    "    Parameters:\n",
+    "    rho (function): Density function (either rho_NFW or rho_iso).\n",
+    "    x (float): Fractional distance parameter, 0 ≤ x ≤ 1.\n",
+    "\n",
+    "    Returns:\n",
+    "    float: Integrand value for optical depth.\n",
     "    '''\n",
     "    r = pos_sol(x)\n",
     "    einstein_radius_sq_m = Einstein_angle_sq_m(x)\n",
     "    optical_depth_integrand = (np.pi * rho(r) * einstein_radius_sq_m)\n",
     "    return optical_depth_integrand.decompose().value  # Strip units for integration\n",
     "\n",
-    "# Perform the integration\n",
-    "optical_depth, _ = fixed_quad(lambda x: int_optical_depth(rho_NFW, x), 0, 1, n=10)\n",
-    "print(\"Integrated Optical Depth:\", optical_depth)\n"
+    "# Perform the integration over x from 0 to 1 using the fixed_quad method\n",
+    "optical_depth_iso, _ = fixed_quad(lambda x: int_optical_depth(rho_iso, x), 0, 1, n=10)\n",
+    "optical_depth_NFW, _ = fixed_quad(lambda x: int_optical_depth(rho_NFW, x), 0, 1, n=10)\n",
+    "print(\"Integrated Optical Depth (Isothermal Sphere):\", optical_depth_iso)\n",
+    "print(\"Integrated Optical Depth (Navarro Frenk White):\", optical_depth_NFW)\n"
    ]
   },
   {
@@ -183,9 +242,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyLIMA",
+   "display_name": "pyLIMA-pip",
    "language": "python",
-   "name": "pylima"
+   "name": "pylima-pip"
   },
   "language_info": {
    "codemirror_mode": {
@@ -197,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
