--- a/Lista_4.ipynb
+++ b/Lista_4.ipynb
@@ -5,30 +5,7 @@
    "id": "614e53ea-e48e-427a-9517-aebc5b285527",
    "metadata": {},
    "source": [
-    "# Profundidad optica"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "567af0ff-61b6-4334-8f10-78032498b3a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy import integrate\n",
-    "from scipy.integrate import quad\n",
-    "from scipy import special\n",
-    "from mpmath import hyp1f1\n",
-    "import mpmath as mp\n",
-    "from scipy.integrate import dblquad\n",
-    "from multiprocessing import Pool\n",
-    "from functools import partial\n",
-    "import astropy.constants as c\n",
-    "import astropy.units as u\n",
-    "# import sympy as sp\n",
-    "import math"
+    "# Optical depth"
    ]
   },
   {
@@ -36,90 +13,38 @@
    "id": "271569bf-1f27-4d87-b312-c917623945b4",
    "metadata": {},
    "source": [
-    "La profundidad Optica es\n",
-    "$$\\tau = \\int_0^{ D_S} \\frac{\\rho(x)}{m}\\pi u_T^2 R_E(x)^2 dx$$\n",
-    "consideramos $x = D_L/D_S$, $u_T=1$, $D_S=8Kpc$\n",
+    "The optical depth is defined as\n",
+    "$$\n",
+    "\\tau = \\int_0^{D_S} \\frac{\\rho(x)}{m} \\, \\pi u_T^2 R_E(x)^2 \\, dx\n",
+    "$$\n",
+    "where we use $ x = \\frac{D_L}{D_S} $, $ u_T = 1 $, and $ D_S = 8 \\, \\text{kpc} $.\n",
     "\n",
-    "La cantidad $\\frac{R_E(x)^2}{m} = \\kappa \\pi D_s^2 x(1-x)$\n",
+    "The factor $ \\frac{R_E(x)^2}{m} = \\kappa D_S^2 x(1 - x) $ represents the squared Einstein radius scaled by the lens mass, where $ \\kappa =\\frac{4G}{c^2}$ is a constant.\n",
     "\n",
-    "Por un lado la densidad de esfera isoterma es\n",
+    "The density profiles considered are as follows:\n",
     "\n",
-    "$$\\rho(x) = \\frac{R_{sol}^2+R_c^2}{R_c^2+r(x)^2} $$\n",
+    "1. **Isothermal Sphere Density Profile**:\n",
+    "   $$\n",
+    "   \\rho(x) = \\frac{\\rho_0 (R_\\text{sol}^2 + R_c^2)}{R_c^2 + r(x)^2}\n",
+    "   $$\n",
+    "   where $ R_\\text{sol} $ is the distance of the Sun from the Galactic center, $ R_c $ is the core radius, and $ r(x) $ gives the distance from the Galactic center to the lens at position $ x $.\n",
     "\n",
-    "Por otro lado la densidad de NFW\n",
-    "$$\\rho(x) = \\frac{\\rho_0}{\\frac{r(x)}{R_s}\\left(1+\\frac{r(x)}{R_s}\\right)^2} $$\n",
+    "2. **Navarro-Frenk-White (NFW) Density Profile**:\n",
+    "   $$\n",
+    "   \\rho(x) = \\frac{\\rho_0}{\\frac{r(x)}{R_s} \\left(1 + \\frac{r(x)}{R_s}\\right)^2}\n",
+    "   $$\n",
+    "   where $ \\rho_0 $ is a characteristic density, and $ R_s $ is the NFW scale radius.\n",
     "\n",
-    "con $$ r(x) = \\sqrt{R_S^2 + (D_S x)^2 - 2 D_S Rs  x  \\cos(l)\\cos(b))}$$"
+    "In both cases, $ r(x) $ is given by\n",
+    "$$\n",
+    "r(x) = \\sqrt{R_S^2 + (D_S x)^2 - 2 D_S R_s x \\cos(l) \\cos(b)}\n",
+    "$$\n",
+    "where $ l $ and $ b $ are the Galactic longitude and latitude of the source, respectively.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3cbfb643-6892-4e14-9122-6eeb30c885a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a5f26945-b7a2-481d-b252-6eded12d767e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rho_0 = 7.9e-3*c.M_sun/(u.pc)**3\n",
-    "pi    = np.pi\n",
-    "a     = 5*u.kpc \n",
-    "R_0   = 8.5*u.kpc \n",
-    "D_S   = np.array([1,5,10,55])*u.kpc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "983570dd-3416-4127-b29f-50a0c1b62540",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def integrand_OD_KG(x,angle,D_s):\n",
-    "    A     = (a**2+R_0**2)/D_s**2\n",
-    "    B     = R_0/D_s\n",
-    "    tau_0 = (4*pi*c.G*rho_0*(a**2+R_0**2))/(c.c**2) #4.61*10**-7\n",
-    "    return tau_0*x*(1-x)/(x**2+A-2*x*B*angle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "1a97dad5-73e4-4627-a62b-ecfcd292c311",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.104534452369212e-07\n"
-     ]
-    }
-   ],
-   "source": [
-    "angle_lmc = np.cos(math.radians(-32.8))*np.cos(math.radians(281))\n",
-    "tau_lmc_0 = integrate.fixed_quad(lambda x: integrand_OD_KG(x,angle_lmc, D_S[3]), 0, 1,n=10)\n",
-    "tau_lmc   = tau_lmc_0[0]\n",
-    "print(tau_lmc.decompose())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "216b5f82-927c-4488-b66e-23379d57a179",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "50956919-d606-411e-ae50-b6bddb22a07e",
    "metadata": {
     "tags": []
