--- a/FoF-Microlensing_&_Dark_Matter.ipynb
+++ b/FoF-Microlensing_&_Dark_Matter.ipynb
@@ -43,29 +43,19 @@
     "id": "3e469778"
    },
    "source": [
-    "#Tasa de eventos diferencial \n",
-    "se deduce como la distribucion de duración de eventos de microlente \n",
+    "# Taxa de eventos diferencial\n",
+    "é deduzida como a distribuição da duração de eventos de microlente\n",
     "\\begin{equation}\n",
     "    \\frac{d\\Gamma}{d\\hat{t}}= 2D_S \\int_{0}^{1}dx \\frac{\\rho(x)}{Mv_c^2}v_E^4 \\, \\exp{\\left(-\\frac{v_E^2}{v_c^2}\\right)}\n",
     "\\end{equation}\n",
     "\n",
-    "El perfil que describa a los objetos del halo de la galaxia vendra dado por uno de esfera isótropo, isotermo y no singular de la siguiente forma\n",
+    "O perfil que descreve os objetos do halo da galáxia será dado por uma esfera isotrópica, isotérmica e não singular da seguinte forma\n",
     "\\begin{equation}\n",
     "    \\rho_{isot}(R) = \\rho_{\\odot} \\frac{R_{Sol}^2+R_C^2}{R_C^2+R^2} \\,,\n",
     "\\end{equation}\n",
-    "con $\\rho_{\\odot} = 0.0097M_{\\odot}\\text{pc}^{-3}$,  $R_C= 5$kpc el radio del core de la galaxia y $R_{Sol}=8.5$ kpc la distancia del Sol al centro de la galaxia.\n",
+    "com $\\rho_{\\odot} = 0.0097M_{\\odot}\\text{pc}^{-3}$, $R_C= 5$ kpc o raio do núcleo da galáxia e $R_{Sol}=8.5$ kpc a distância do Sol ao centro da galáxia.\n",
     "\n",
-    "Por otro lado, $v_E = R_E(x)/t_E$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e438b87",
-   "metadata": {
-    "id": "9e438b87"
-   },
-   "source": [
-    "Defino algunas funciones para calcular la tasa de eventos diferencial"
+    "Por outro lado, $v_E = R_E(x)/t_E$\n"
    ]
   },
   {
@@ -79,11 +69,11 @@
    "source": [
     "def rE(m, x, D):\n",
     "    ''' \n",
-    "    Radio de Einstein.\n",
+    "    Raio de Einstein.\n",
     "    Entradas:\n",
-    "    m: masa de la lente.\n",
-    "    x: D_OL/D distancia a la lente normalizada por la distancia a la fuente.\n",
-    "    D: Distancia a la fuente.\n",
+    "    m: massa da lente.\n",
+    "    x: D_OL/D distância até a lente normalizada pela distância até a fonte.\n",
+    "    D: Distância até a fonte.\n",
     "    '''\n",
     "    arg = (4*C.G*(m*C.M_sun)*(D*u.kpc)*x*(1-x)/(C.c**2)).decompose()\n",
     "    rE = np.sqrt(abs(arg)).decompose()\n",
@@ -91,9 +81,9 @@
     "\n",
     "def r(x):\n",
     "    '''\n",
-    "    Distancia a la fuente.\n",
+    "    Distância até a fonte.\n",
     "    Entradas:\n",
-    "    x: D_OL/D distancia a la lente normalizada por la distancia a la fuente.\n",
+    "    x: D_OL/D distância até a lente normalizada pela distância até a fonte.\n",
     "    '''\n",
     "    R0 = 8.5*u.kpc\n",
     "    L = 50*u.kpc\n",
@@ -102,34 +92,33 @@
     "\n",
     "def rho(x):\n",
     "    '''\n",
-    "    Perfil de esfera isoterma para los objetos del halo de la galaxia.\n",
+    "    Perfil de esfera isotérmica para os objetos do halo da galáxia.\n",
     "    '''\n",
     "    R0 = 8.5*u.kpc\n",
     "    Rc = 5*u.kpc\n",
     "    return (0.0079*(R0**2+Rc**2)/(r(x)**2+Rc**2)*C.M_sun/u.pc**3).decompose()\n",
     "\n",
-    "def integrand(x,t,m):\n",
+    "def integrand(x, t, m):\n",
     "    '''\n",
-    "    Integrando de la tasa de eventos diferencial.\n",
-    "    El objetivo será La Gran Nube de Magallanes.\n",
+    "    Integrando da taxa de eventos diferencial.\n",
+    "    O alvo será a Grande Nuvem de Magalhães.\n",
     "    '''\n",
-    "    vc=220*u.km/u.s\n",
-    "    d = 50 #kpc\n",
-    "    D =d*u.kpc\n",
-    "    Q = ((4*rE(m,x,d)**2)/(t*u.year*vc)**2).decompose()\n",
+    "    vc = 220*u.km/u.s\n",
+    "    d = 50 # kpc\n",
+    "    D = d*u.kpc\n",
+    "    Q = ((4*rE(m, x, d)**2)/(t*u.year*vc)**2).decompose()\n",
     "    exp_fac = np.exp(-Q)\n",
     "    factor = 32*D/((m*C.M_sun)*(t*u.year)**4 * vc**2)\n",
     "    \n",
-    "    integ = ((factor)*rho(x)*exp_fac*rE(m,x,d)**4*u.year**2).decompose()\n",
+    "    integ = ((factor)*rho(x)*exp_fac*rE(m, x, d)**4*u.year**2).decompose()\n",
     "    # print(integ[0])\n",
     "    return integ\n",
-    "    \n",
     "\n",
-    "def event_rate(t,m):\n",
+    "def event_rate(t, m):\n",
     "    '''\n",
-    "    Tasa de eventos diferencial.\n",
+    "    Taxa de eventos diferencial.\n",
     "    '''\n",
-    "    return integrate.fixed_quad(lambda x: integrand(x,t,m), 0, 1,n=10000)[0]\n"
+    "    return integrate.fixed_quad(lambda x: integrand(x, t, m), 0, 1, n=10000)[0]\n"
    ]
   },
   {
