--- a/Lista_5.ipynb
+++ b/Lista_5.ipynb
@@ -2,18 +2,140 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "3ab8da20-bfd8-4aa7-bea7-93c7a9afefb5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------\n",
+      "a) Potencial gravitacional\n",
+      "phi/c^2 para galaxias: -1.02e-04\n",
+      "phi/c^2 para cúmulos: -2.61e-05\n",
+      "----------------------------------------------------\n",
+      "b) Velocidad al cuadrado típica\n",
+      "(v/c)^2 para galaxias: 4.45e-13 km2 / m2\n",
+      "(v/c)^2 para cúmulos: 1.11e-11 km2 / m2\n",
+      "----------------------------------------------------\n",
+      "c) Tiempo y distancia de Hubble\n",
+      "h es aproximadamente 0.7\n",
+      "Tiempo de Hubble: 4.45e+17 s (14.11 Gyr)\n",
+      "Distancia de Hubble: 1.33e+23 km (4324.76 Mpc)\n",
+      "----------------------------------------------------\n",
+      "d) Densidades asociadas con la CMB\n",
+      "Densidad de energía (CMB): 4.17e-14 W s / m3\n",
+      "Densidad de masa (CMB): 4.64e-34 g / cm3\n",
+      "Densidad numérica de fotones: 400.00 fotones/cm^3\n",
+      "----------------------------------------------------\n",
+      "e) Densidad crítica y Omega_gamma\n",
+      "Densidad crítica: 9.20e-30 g / cm3\n",
+      "Omega_gamma: 5.04e-05\n",
+      "----------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from astropy.constants import G, c, sigma_sb, M_sun\n",
+    "from astropy.units import pc, km, s, m, K, g, cm\n",
+    "from astropy.cosmology import WMAP9 as cosmo\n",
+    "import astropy.units as u\n",
+    "\n",
+    "kpc = 1e3 * pc      # Kiloparsec en parsecs\n",
+    "Mpc = 1e6 * pc      # Megaparsec en parsecs\n",
+    "T_cmb = 2.725 * K   # Temperatura del fondo cósmico en Kelvin\n",
+    "\n",
+    "# Funciones para cálculos\n",
+    "def potential_phi(M, R):\n",
+    "    \"\"\"Calcula el potencial gravitacional phi / c^2.\"\"\"\n",
+    "    phi = -G * M / R\n",
+    "    return (phi / c**2).decompose()\n",
+    "\n",
+    "def velocity_squared_ratio(v):\n",
+    "    \"\"\"Calcula (v/c)^2.\"\"\"\n",
+    "    return (v / c)**2\n",
+    "\n",
+    "def hubble_time_and_distance(h):\n",
+    "    \"\"\"Calcula t_H y D_H dados H_0 = 100 * h.\"\"\"\n",
+    "    H0 = cosmo.H(0).decompose() #usamos el valor de H0 dado por Astropy\n",
+    "    print('h es aproximadamente', round(float((H0*(100*u.km/s/Mpc)**-1).decompose()),1)) # que corresponde a h reducido =0.7 aprox.\n",
+    "    t_H = (1 / H0).to(s)  # Tiempo de Hubble en segundos\n",
+    "    D_H = (c / H0).to(m)  # Distancia de Hubble en metros\n",
+    "    return t_H, D_H\n",
+    "\n",
+    "def cmb_energy_density(T):\n",
+    "    \"\"\"Calcula densidades asociadas con la radiación cósmica de fondo.\"\"\"\n",
+    "    rho = (4 / c) * sigma_sb * T**4  # Densidad de energía (J/m^3)\n",
+    "    rho_mass = (rho / c**2).to(g / cm**3)  # Densidad de masa (g/cm^3)\n",
+    "    n_photons = 400  # Número de fotones/cm^3 (aproximación conocida)\n",
+    "    return rho, rho_mass, n_photons\n",
+    "\n",
+    "def critical_density(h):\n",
+    "    \"\"\"Calcula la densidad crítica rho_crit en g/cm^3.\"\"\"\n",
+    "    H0 = (100 * h * km / s / Mpc).to(1 / s)  # H_0 en s^-1\n",
+    "    rho_crit = (3 * H0**2 / (8 * np.pi * G)).to(g / cm**3)  # Densidad crítica en g/cm^3\n",
+    "    return rho_crit\n",
+    "\n",
+    "def omega_gamma(rho_gamma, rho_crit):\n",
+    "    \"\"\"Calcula el parámetro de densidad Omega_gamma.\"\"\"\n",
+    "    return (rho_gamma / rho_crit).value\n",
+    "\n",
+    "\n",
+    "print('----------------------------------------------------')\n",
+    "print('a) Potencial gravitacional')\n",
+    "M_galaxy = 1e12 * M_sun #masa de la Via Lactea\n",
+    "R_galaxy = 470 * pc\n",
+    "M_cluster = 1.2e15 * M_sun #masa del Cumulo de Virgo\n",
+    "R_cluster = 2.2 * Mpc\n",
+    "phi_galaxy = potential_phi(M_galaxy, R_galaxy)\n",
+    "phi_cluster = potential_phi(M_cluster, R_cluster)\n",
+    "print(f\"phi/c^2 para galaxias: {phi_galaxy:.2e}\")\n",
+    "print(f\"phi/c^2 para cúmulos: {phi_cluster:.2e}\")\n",
+    "\n",
+    "\n",
+    "print('----------------------------------------------------')\n",
+    "print('b) Velocidad al cuadrado típica')\n",
+    "v_galaxy = 200 * km / s    #    m/s\n",
+    "v_cluster = 1000 * km / s  #    m/s\n",
+    "v2_galaxy = velocity_squared_ratio(v_galaxy)\n",
+    "v2_cluster = velocity_squared_ratio(v_cluster)\n",
+    "print(f\"(v/c)^2 para galaxias: {v2_galaxy:.2e}\")\n",
+    "print(f\"(v/c)^2 para cúmulos: {v2_cluster:.2e}\")\n",
+    "\n",
+    "\n",
+    "print('----------------------------------------------------')\n",
+    "print('c) Tiempo y distancia de Hubble')\n",
+    "t_H, D_H = hubble_time_and_distance(h)\n",
+    "print(f\"Tiempo de Hubble: {t_H:.2e} ({t_H.to('Gyr'):.2f})\")\n",
+    "print(f\"Distancia de Hubble: {D_H.to('km'):.2e} ({D_H.to('Mpc'):.2f})\")\n",
+    "\n",
+    "print('----------------------------------------------------')\n",
+    "print('d) Densidades asociadas con la CMB')\n",
+    "rho_gamma, rho_mass_g, n_photons = cmb_energy_density(T_cmb)\n",
+    "print(f\"Densidad de energía (CMB): {rho_gamma:.2e}\")\n",
+    "print(f\"Densidad de masa (CMB): {rho_mass_g:.2e}\")\n",
+    "print(f\"Densidad numérica de fotones: {n_photons:.2f} fotones/cm^3\")\n",
+    "\n",
+    "\n",
+    "print('----------------------------------------------------')\n",
+    "print('e) Densidad crítica y Omega_gamma')\n",
+    "rho_crit = critical_density(h)\n",
+    "omega_gamma_value = omega_gamma(rho_mass_g, rho_crit)\n",
+    "print(f\"Densidad crítica: {rho_crit:.2e}\")\n",
+    "print(f\"Omega_gamma: {omega_gamma_value:.2e}\")\n",
+    "print('----------------------------------------------------')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyLIMA",
+   "display_name": "pyLIMA-pip",
    "language": "python",
-   "name": "pylima"
+   "name": "pylima-pip"
   },
   "language_info": {
    "codemirror_mode": {
@@ -25,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
